--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -489,6 +489,36 @@ include "ADnEDDetectorPixelPlugin.template"
 substitute "R=$(ADNED)"
 
 # ///
+# /// Records to calculate bad time stamp summary status 
+# ///
+record(calc, "$(P)$(R)StatusCalcTimeStamp")
+{
+   field(DESC, "Calc Time Stamp Status")
+   field(PINI, "YES")
+   field(VAL, "0")
+   field(INPA, "$(P)$(R)BadTimeStamp0_RBV CP MS")
+   field(INPB, "$(P)$(R)BadTimeStamp1_RBV CP MS")
+   field(INPC, "$(P)$(R)BadTimeStamp2_RBV CP MS")
+   field(INPD, "$(P)$(R)BadTimeStamp3_RBV CP MS")
+   field(CALC, "A||B||C||D")
+}
+
+# ///
+# /// Records to calculate missing sequence ID summary status 
+# ///
+record(calc, "$(P)$(R)StatusCalcSeqID")
+{
+   field(DESC, "Calc Seq ID Status")
+   field(PINI, "YES")
+   field(VAL, "0")
+   field(INPA, "$(P)$(R)SeqID0NumMissing_RBV CP MS")
+   field(INPB, "$(P)$(R)SeqID1NumMissing_RBV CP MS")
+   field(INPC, "$(P)$(R)SeqID2NumMissing_RBV CP MS")
+   field(INPD, "$(P)$(R)SeqID3NumMissing_RBV CP MS")
+   field(CALC, "A||B||C||D")
+}
+
+# ///
 # /// Records to calculate what the overall Status PV should be
 # ///
 record(calc, "$(P)$(R)StatusCalc")
@@ -497,10 +527,10 @@ record(calc, "$(P)$(R)StatusCalc")
    field(PINI, "YES")
    field(VAL, "0")
    field(INPA, "$(P)$(R)DetectorState_RBV CP MS")
-   field(INPB, "$(P)$(R)BadTimeStamp_RBV CP MS")
-   field(INPC, "$(P)$(R)SeqIDNumMissing_RBV CP MS")
-   field(INPD, "$(P)$(R)AllocSpaceStatus_RBV CP MS")
-   field(CALC, "(A>1)||(B!=0)||(C!=0)||(D>1)?1:0")
+   field(INPB, "$(P)$(R)AllocSpaceStatus_RBV CP MS")
+   field(INPC, "$(P)$(R)StatusCalcTimeStamp CP MS")
+   field(INPD, "$(P)$(R)StatusCalcSeqID CP MS")
+   field(CALC, "(A>1)||(B>1)||C||D?1:0")
 }
 
 # ///
@@ -510,7 +540,8 @@ record(calc, "$(P)$(R)StatusCalc")
 record(bi, "$(P)$(R)Status")
 {
    field(DESC, "Motor Status")
-   field(INP, "$(P)$(R)SatusCalc.VAL CP MS")
+   field(INP, "$(P)$(R)StatusCalc.VAL CP MS")
+   field(PINI, "YES")
    field(ZNAM, "Ok")
    field(ONAM, "Error")
    field(OSV, "MAJOR")
