ADnEDApp/Db/ADnEDPixelROI.template: automatically include the use NDPluginBase.template

--- a/ADnEDApp/Db/ADnEDPixelROI.template
+++ b/ADnEDApp/Db/ADnEDPixelROI.template
@@ -17,6 +17,8 @@
 #
 #####################################################################
 
+include "NDPluginBase.template"
+
 ###################################################################
 #  These records control the label for the ROI                    #
 ###################################################################
