New plugin called ADnEDPluginMask that can mask out part of an NDArray. It can be used to mask out the prompt pulse for example, or other non-interesting peaks. This might move into ADCore at some point.

--- a/ADnEDApp/src/Makefile
+++ b/ADnEDApp/src/Makefile
@@ -21,6 +21,7 @@ ADnEDSupport_SRCS += nEDChannel.cpp
 ADnEDSupport_SRCS += ADnEDPixelROI.cpp
 ADnEDSupport_SRCS += ADnEDFile.cpp
 ADnEDSupport_SRCS += ADnEDAxis.c
+ADnEDSupport_SRCS += ADnEDPluginMask.cpp
 
 ADnEDTransform_SRCS += ADnEDTransformBase.cpp
 ADnEDTransform_SRCS += ADnEDTransform.cpp
