--- a/ADnEDApp/Db/ADnEDDetectorTOFPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorTOFPlugin.template
@@ -24,18 +24,50 @@ substitute "PORT=$(ADNED_PORT).DET$(DET).TOF"
 substitute "NDARRAY_PORT=$(ADNED_PORT)"
 include "NDROI.template"
 
+# TOF Masks
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:"
+substitute "O=$(ADNED)Det$(DET):TOF:Mask:"
+substitute "PORT=$(ADNED_PORT).DET$(DET).TOF.MASK"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).TOF"
+include "ADnEDMask.template"
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:0:"
+substitute "ADDR=0"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:1:"
+substitute "ADDR=1"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:2:"
+substitute "ADDR=2"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:3:"
+substitute "ADDR=3"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:4:"
+substitute "ADDR=4"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:5:"
+substitute "ADDR=5"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:6:"
+substitute "ADDR=6"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:Mask:7:"
+substitute "ADDR=7"
+include "ADnEDMaskN.template"
+
 # TOF Waveform
 substitute "R=$(ADNED)Det$(DET):TOF:Array:"
 substitute "PORT=$(ADNED_PORT).DET$(DET).TOF.ARR"
-substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).TOF"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).TOF.MASK"
 substitute "TYPE=Int32"
 substitute "FTVL=LONG"
+substitute "ADDR=0"
 include "NDStdArrays.template"
 
 # Normal TOF ROIs amd Stats
 substitute "R=$(ADNED)Det$(DET):TOF:ROI:"
 substitute "PORT=$(ADNED_PORT).DET$(DET).TOF.ROI"
-substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).TOF"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).MASK"
 include "NDROIStat.template"
 substitute "R=$(ADNED)Det$(DET):TOF:ROI:0:"
 substitute "ADDR=0"
