--- a/st.cmd.config
+++ b/st.cmd.config
@@ -18,17 +18,23 @@ NDROIConfigure("$(PORT).DET2.TOF", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
 NDROIConfigure("$(PORT).DET3.TOF", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
 NDROIConfigure("$(PORT).DET4.TOF", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
 
+#ADnEDMask plugins to mask out part of the spectrum
+NDROIStatConfigure("$(PORT).DET1.TOF.MASK", 100, 0, "$(PORT).DET1.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET2.TOF.MASK", 100, 0, "$(PORT).DET2.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET3.TOF.MASK", 100, 0, "$(PORT).DET3.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET4.TOF.MASK", 100, 0, "$(PORT).DET4.TOF", 0, 8, -1, -1, 0, 0)
+
 #Standard arrays plugin for channel access visualisation of the TOF arrays
-NDStdArraysConfigure("$(PORT).DET1.TOF.ARR", 100, 0, "$(PORT).DET1.TOF", 0, -1, 0, 0)
-NDStdArraysConfigure("$(PORT).DET2.TOF.ARR", 100, 0, "$(PORT).DET2.TOF", 0, -1, 0, 0)
-NDStdArraysConfigure("$(PORT).DET3.TOF.ARR", 100, 0, "$(PORT).DET3.TOF", 0, -1, 0, 0)
-NDStdArraysConfigure("$(PORT).DET4.TOF.ARR", 100, 0, "$(PORT).DET4.TOF", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET1.TOF.ARR", 100, 0, "$(PORT).DET1.TOF.MASK", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET2.TOF.ARR", 100, 0, "$(PORT).DET2.TOF.MASK", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET3.TOF.ARR", 100, 0, "$(PORT).DET3.TOF.MASK", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET4.TOF.ARR", 100, 0, "$(PORT).DET4.TOF.MASK", 0, -1, 0, 0)
 
 #ROI plugins to do ROI/Stats on the TOF spectrums (configure 8 by default)
-NDROIStatConfigure("$(PORT).DET1.TOF.ROI", 100, 0, "$(PORT).DET1.TOF", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("$(PORT).DET2.TOF.ROI", 100, 0, "$(PORT).DET2.TOF", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("$(PORT).DET3.TOF.ROI", 100, 0, "$(PORT).DET3.TOF", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("$(PORT).DET4.TOF.ROI", 100, 0, "$(PORT).DET4.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET1.TOF.ROI", 100, 0, "$(PORT).DET1.TOF.MASK", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET2.TOF.ROI", 100, 0, "$(PORT).DET2.TOF.MASK", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET3.TOF.ROI", 100, 0, "$(PORT).DET3.TOF.MASK", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET4.TOF.ROI", 100, 0, "$(PORT).DET4.TOF.MASK", 0, 8, -1, -1, 0, 0)
 
 #asynSetTraceMask("$(PORT).DET1.TOF.ROI",0,0xFF)
 #asynSetTraceIOMask("$(PORT).DET1.TOF.ROI",0,0xFF)
