--- a/ADnEDApp/Db/ADnEDMaskN.template
+++ b/ADnEDApp/Db/ADnEDMaskN.template
@@ -163,6 +163,29 @@ record(longin, "$(P)$(R)Value_RBV")
     field(SCAN, "I/O Intr")
 }
 
+record(mbbo, "$(P)$(R)Type")
+{
+    field(PINI, "YES")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))MASK_TYPE")
+    field(ZRVL, "0")
+    field(ONVL, "1")
+    field(ZRST, "Reject")
+    field(ONST, "Pass")
+    info(autosaveFields, "VAL")
+}
+
+record(mbbi, "$(P)$(R)Type_RBV")
+{
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))MASK_TYPE")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ONVL, "1")
+    field(ZRST, "Reject")
+    field(ONST, "Pass")
+}
+
 ###################################################################
 #  These records set the HOPR and LOPR values for the position    
 #  and size to the maximum for the input array                    
