--- a/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
@@ -26,10 +26,42 @@ substitute "PORT=$(ADNED_PORT).DET$(DET).XY"
 substitute "NDARRAY_PORT=$(ADNED_PORT)"
 include "ADnEDPixelROI.template"
 
+# TOF Masks
+substitute "R=$(ADNED)Det$(DET):XY:Mask:"
+substitute "O=$(ADNED)Det$(DET):XY:Mask:"
+substitute "PORT=$(ADNED_PORT).DET$(DET).XY.MASK"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY"
+include "ADnEDMask.template"
+substitute "R=$(ADNED)Det$(DET):XY:Mask:0:"
+substitute "ADDR=0"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):XY:Mask:1:"
+substitute "ADDR=1"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):XY:Mask:2:"
+substitute "ADDR=2"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):XY:Mask:3:"
+substitute "ADDR=3"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):XY:Mask:4:"
+substitute "ADDR=4"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):XY:Mask:5:"
+substitute "ADDR=5"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):XY:Mask:6:"
+substitute "ADDR=6"
+include "ADnEDMaskN.template"
+substitute "R=$(ADNED)Det$(DET):XY:Mask:7:"
+substitute "ADDR=7"
+include "ADnEDMaskN.template"
+substitute "ADDR=0"
+
 # Pixel X/Y Waveform
 substitute "R=$(ADNED)Det$(DET):XY:Array:"
 substitute "PORT=$(ADNED_PORT).DET$(DET).XY.ARR"
-substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY.MASK"
 substitute "TYPE=Int32"
 substitute "FTVL=LONG"
 include "NDStdArrays.template"
@@ -37,7 +69,7 @@ include "NDStdArrays.template"
 # ROI and Stats
 substitute "R=$(ADNED)Det$(DET):XY:ROI:"
 substitute "PORT=$(ADNED_PORT).DET$(DET).XY.ROI"
-substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY.MASK"
 include "NDROIStat.template"
 substitute "R=$(ADNED)Det$(DET):XY:ROI:0:"
 substitute "ADDR=0"
@@ -70,7 +102,7 @@ substitute "R=$(ADNED)Det$(DET):XY:ROI:"
 # Single Stats Plugin on entire 2-D NDArray
 substitute "R=$(ADNED)Det$(DET):XY:Stat:"
 substitute "PORT=$(ADNED_PORT).DET$(DET).XY.STAT"
-substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY.MASK"
 substitute "NCHANS=1024"
 include "NDStats.template"
 
