st.cmd.config: double the size of the scanOnce ring buffer.

--- a/st.cmd.config
+++ b/st.cmd.config
@@ -72,4 +72,7 @@ NDStatsConfigure("$(PORT).DET2.XY.STAT", 100, 0, "$(PORT).DET2.XY.MASK", 0, -1, 
 NDStatsConfigure("$(PORT).DET3.XY.STAT", 100, 0, "$(PORT).DET3.XY.MASK", 0, -1, -1, 0, 0)
 NDStatsConfigure("$(PORT).DET4.XY.STAT", 100, 0, "$(PORT).DET4.XY.MASK", 0, -1, -1, 0, 0)
 
+#Double the size of the scanOnce ring buffer
+scanOnceSetQueueSize(2000)
+
 #End of st.cmd.config
